--- a/index.html
+++ b/index.html
@@ -1,39 +1,74 @@
 <!DOCTYPE html>
 <!-- This HTML is using the BEM model to organize all the elements -->
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet" />
 
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Natours | Exciting tours for adventurous people</title>
-  </head>
+</head>
 
-  <body>
-    <header class="header">
-      <div class="header__logo-box">
-        <!-- The alt attribute will allow for search engine optimization -->
-        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
-      </div>
+<body>
 
-      <div class="header__text-box">
-        <!-- NOTE: The heading is very important as it is read by google and indexed. Google will also use these headings to figure out what the webpage is all about  -->
-        <h1 class="heading-primary">
-          <!-- Span is just to span the same text on different lines -->
-          <span class="heading-primary--main">Outdoors</span>
-          <span class="heading-primary--sub">is where life happens</span>
-        </h1>
+    <!-- <header class="header">
+        <div class="header__logo-box">
+            <!-- The alt attribute will allow for search engine optimization - ->
+            <img src="img/logo-white.png" alt="Logo" class="header__logo" />
+        </div>
 
-        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
-      </div>
-    </header>
-  </body>
+        <div class="header__text-box">
+            <!-- NOTE: The heading is very important as it is read by google and indexed. Google will also use these headings to figure out what the webpage is all about  -- >
+    <h1 class="heading-primary">
+        <!-- Span is just to span the same text on different lines - ->
+                <span class="heading-primary--main">Outdoors</span>
+                <span class="heading-primary--sub">is where life happens</span>
+            </h1>
+            <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+        </div>
+    </header> -->
+
+    <!-- This section is just to test the grid. It will need to be deleted later -->
+    <section class="grid-test">
+        <div class="row">
+            <div class="col-1-of-2">Col 1 of 2</div>
+            <div class="col-1-of-2">Col 2 of 2</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">Col 1 of 3</div>
+            <div class="col-1-of-3">Col 1 of 3</div>
+            <div class="col-1-of-3">Col 1 of 3</div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3">Col 1 of 3</div>
+            <div class="col-2-of-3">Col 2 of 3</div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-1-of-4">Col 1 of 4</div>
+        </div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-2-of-4">Col 2 of 4</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-1-of-4">Col 1 of 4</div>
+            <div class="col-2-of-4">Col 2 of 4</div>
+        </div>
+    </section>
+</body>
+
 </html>
