--- a/index.html
+++ b/index.html
@@ -38,14 +38,35 @@
 
     <main>
       <section class="section-about" id="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
 
         <div class="row">
-          <div class="col-1-of-2">Col 1 of 2</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quae aut
+              eum eveniet quasi? Qui, quo? Voluptate ad maxime dolores,
+              voluptatibus consequatur reprehenderit velit ratione officia
+              provident labore illum. Dignissimos, cupiditate?
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you have never before
+            </h3>
+            <p class="paragraph">
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas
+              iure quia commodi, nemo reprehenderit facilis quo exercitationem
+              quam, aliquid ex unde inventore et repudiandae. Laborum, quibusdam
+              ut. Dolorum, aliquam expedita.
+            </p>
+            <!-- # is used when we dont want the anchor to point to anywhere -->
+            <a href="#" class="btn-text">Learn more &rarr;</a>
+          </div>
           <div class="col-1-of-2">Col 2 of 2</div>
         </div>
       </section>
