--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               ut. Dolorum, aliquam expedita.
             </p>
             <!-- # is used when we dont want the anchor to point to anywhere -->
-            <a href="#" class="btn-text">Learn more &rarr;</a>
+            <a href="#heading-tertiary" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">Col 2 of 2</div>
         </div>
