--- a/index.html
+++ b/index.html
@@ -88,6 +88,47 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+                <icon class="feature-box__icon icon-basic-world"></icon> 
+                <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
+                </p>
+              </div>
+            </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+                <icon class="feature-box__icon icon-basic-compass"></icon> 
+                <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
+                </p>
+              </div>
+            </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+                <icon class="feature-box__icon icon-basic-map"></icon> 
+                <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
+                </p>
+              </div>
+            </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+                <icon class="feature-box__icon icon-basic-heart"></icon> 
+                <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
+                <p class="feature-box__text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
+                </p>
+              </div>
+            </div>
+          </div>
+        </i>
+      </section>
     </main>
 
     <!-- <!-- This section is just to test the grid. It will need to be deleted later -- >
