Restored the contents of the _grid.scss file

--- a/index.html
+++ b/index.html
@@ -129,6 +129,14 @@
           </div>
         </i>
       </section>
+
+      <section class="section-tours">
+         <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most Popular tours
+          </h2>
+        </div>
+      </section>
     </main>
 
     <!-- <!-- This section is just to test the grid. It will need to be deleted later -- >
