--- a/index.html
+++ b/index.html
@@ -92,49 +92,90 @@
         <div class="row">
           <div class="col-1-of-4">
             <div class="feature-box">
-                <icon class="feature-box__icon icon-basic-world"></icon> 
-                <h3 class="heading-tertiary u-margin-bottom-small">Explore the world</h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
-                </p>
-              </div>
-            </div>
-          <div class="col-1-of-4">
-            <div class="feature-box">
-                <icon class="feature-box__icon icon-basic-compass"></icon> 
-                <h3 class="heading-tertiary u-margin-bottom-small">Meet Nature</h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
-                </p>
-              </div>
-            </div>
-          <div class="col-1-of-4">
-            <div class="feature-box">
-                <icon class="feature-box__icon icon-basic-map"></icon> 
-                <h3 class="heading-tertiary u-margin-bottom-small">Find your way</h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
-                </p>
-              </div>
-            </div>
-          <div class="col-1-of-4">
-            <div class="feature-box">
-                <icon class="feature-box__icon icon-basic-heart"></icon> 
-                <h3 class="heading-tertiary u-margin-bottom-small">Live a healthier life</h3>
-                <p class="feature-box__text">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, totam cupiditate, commodi impedit magni quo quam.
-                </p>
-              </div>
+              <icon class="feature-box__icon icon-basic-world"></icon>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Explore the world
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+                totam cupiditate, commodi impedit magni quo quam.
+              </p>
             </div>
           </div>
-        </i>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <icon class="feature-box__icon icon-basic-compass"></icon>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Meet Nature
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+                totam cupiditate, commodi impedit magni quo quam.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <icon class="feature-box__icon icon-basic-map"></icon>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Find your way
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+                totam cupiditate, commodi impedit magni quo quam.
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <icon class="feature-box__icon icon-basic-heart"></icon>
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Live a healthier life
+              </h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum,
+                totam cupiditate, commodi impedit magni quo quam.
+              </p>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section class="section-tours">
-         <div class="u-center-text u-margin-bottom-big">
-          <h2 class="heading-secondary">
-            Most Popular tours
-          </h2>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">Most Popular tours</h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                Front
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                Front
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front card__side--front-1">
+                Front
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                Back
+              </div>
+            </div>
+          </div>
         </div>
       </section>
     </main>
