--- a/index.html
+++ b/index.html
@@ -140,7 +140,6 @@
           </div>
         </div>
       </section>
-
       <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">Most Popular tours</h2>
@@ -149,27 +148,13 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front card__side--front-1">
-                Front
-              </div>
-              <div class="card__side card__side--back card__side--back-1">
-                Back
-              </div>
-            </div>
-          </div>
-          <div class="col-1-of-3">
-            <div class="card">
-              <div class="card__side card__side--front card__side--front-1">
-                Front
-              </div>
-              <div class="card__side card__side--back card__side--back-1">
-                Back
-              </div>
-            </div>
-          </div>
-          <div class="col-1-of-3">
-            <div class="card">
-              <div class="card__side card__side--front card__side--front-1">
-                Front
+                <div class="card__picture card__picture--1">&nbsp</div>
+                <h4 class="card__heading">The Sea Explorer</h4>
+                <div class="card__details">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed
+                  similique corporis fugiat sunt, quam cum corrupti non odio in
+                  suscipit nisi totam ab pariatur.
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
                 Back
