--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <div class="card__cta">
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
-                    <p class="card__price-value">$297</p>
+                    <p class="card__price-value">$497</p>
                   </div>
                   <a href="#section-tours" class="btn btn--white">Book now!</a>
                 </div>
@@ -228,13 +228,17 @@
                 <div class="card__cta">
                   <div class="card__price-box">
                     <p class="card__price-only">Only</p>
-                    <p class="card__price-value">$297</p>
+                    <p class="card__price-value">$897</p>
                   </div>
                   <a href="#section-tours" class="btn btn--white">Book now!</a>
                 </div>
               </div>
             </div>
           </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-big">
+          <a href="#section-tours" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
     </main>
