--- a/index.html
+++ b/index.html
@@ -241,6 +241,69 @@
           <a href="#section-tours" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Mary Smith</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatem perferendis nulla illo consectetur dolorum nostrum
+                dolor, sunt eligendi aliquid ullam dignissimos unde dolore
+                explicabo doloribus autem, quaerat minus? Dolorem, pariatur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptatem perferendis nulla illo consectetur dolorum nostrum
+                dolor, sunt eligendi aliquid ullam dignissimos unde dolore
+                explicabo doloribus autem, quaerat minus? Dolorem, pariatur.
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <a href="#section-stories" class="btn-text"
+            >Read all stories &rarr;</a
+          >
+        </div>
+
+        <div class="bg-video">
+          <video class="bg-video__content">
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+          </video>
+        </div>
+      </section>
     </main>
 
     <!-- <!-- This section is just to test the grid. It will need to be deleted later -- >
