--- a/index.html
+++ b/index.html
@@ -242,6 +242,13 @@
         </div>
       </section>
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4" />
+            <source src="img/video.webm" type="video/webm" />
+            Your browser is not supported!
+          </video>
+        </div>
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
@@ -295,13 +302,6 @@
           <a href="#section-stories" class="btn-text"
             >Read all stories &rarr;</a
           >
-        </div>
-
-        <div class="bg-video">
-          <video class="bg-video__content">
-            <source src="img/video.mp4" type="video/mp4" />
-            <source src="img/video.webm" type="video/webm" />
-          </video>
         </div>
       </section>
     </main>
