--- a/index.html
+++ b/index.html
@@ -304,6 +304,40 @@
           >
         </div>
       </section>
+
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <form action="#book" class="form">
+                <div class="u-center-text u-margin-bottom-medium">
+                  <h2 class="heading-secondary">Start booking now!</h2>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Full Name"
+                    required
+                    id="fullName"
+                  />
+                  <label for="fullName" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input
+                    type="text"
+                    class="form__input"
+                    placeholder="Email"
+                    required
+                    id="email"
+                  />
+                  <label for="email" class="form__label">Email</label>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- <!-- This section is just to test the grid. It will need to be deleted later -- >
