Finished the input fields for the  "START BOOKING NOW!" form

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 </div>
                 <div class="form__group">
                   <input
-                    type="text"
+                    type="email"
                     class="form__input"
                     placeholder="Email"
                     required
