Fixed btn-text. Clicking on it before this fix would move the section down.

--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
               ut. Dolorum, aliquam expedita.
             </p>
             <!-- # is used when we dont want the anchor to point to anywhere -->
-            <a href="#heading-tertiary" class="btn-text">Learn more &rarr;</a>
+            <a href="#section-about" class="btn-text">Learn More &rarr;</a>
           </div>
+
           <div class="col-1-of-2">
             <div class="composition">
               <img
