Deployed a fix for some buttons that appear to be stuck when clicked

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   </head>
 
   <body>
+    <!-- <div class="navigation">
+      <input type="text" class="navigation__checkbox" />
+    </div> -->
+
     <header class="header">
       <div class="header__logo-box">
         <!-- The alt attribute will allow for search engine optimization -->
