--- a/index.html
+++ b/index.html
@@ -29,28 +29,29 @@
         <ul class="navigation__list">
           <li class="navigation__item">
             <a href="#section-about" class="navigation__link">
-              <span>01</span> About Natours</a
-            >
+              <span>01</span>
+              About Natours
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#section-features" class="navigation__link"
-              ><span>02</span> Your Benefits</a
-            >
+            <a href="#section-features" class="navigation__link">
+              <span>02</span>Your Benefits
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#section-tours" class="navigation__link"
-              ><span>03</span> Popular tours</a
-            >
+            <a href="#section-tours" class="navigation__link">
+              <span>03</span>Popular tours
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#section-stories" class="navigation__link"
-              ><span>04</span> Stories</a
-            >
+            <a href="#section-stories" class="navigation__link">
+              <span>04</span>Stories
+            </a>
           </li>
           <li class="navigation__item">
-            <a href="#section-book" class="navigation__link"
-              ><span>05</span> Book Now</a
-            >
+            <a href="#section-book" class="navigation__link">
+              <span>05</span>Book Now
+            </a>
           </li>
         </ul>
       </nav>
